<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avacha</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">アカバ！</string>
    <string name="title_activity_start_avacha">ようこそ</string>
    <string name="title_activity_input_name">ログイン</string>
    <string name="title_activity_select_avatar">アカバ！</string>
    <string name="title_activity_select_face">顔を選ぼう</string>
    <string name="title_activity_friends_list">友だち帳</string>
    <string name="title_activity_friends_profile">友だちプロフィール</string>
    <string name="title_activity_chat">チャット</string>
    <string name="title_activity_chats_list">チャットリスト</string>
    <string name="title_activity_add_list">リストに追加</string>
    <string name="title_activity_open_space">おしゃべり広場</string>
    <string name="title_activity_random_chat">ランダムチャット</string>
    <string name="title_activity_pr_list">PR一覧</string>
    <string name="title_activity_filtering">絞り込み検索</string>
    <string name="title_activity_pr_profile">投稿者のプロフィール</string>
    <string name="title_activity_add_pr">自己PR投稿</string>
    <string name="title_activity_others">その他</string>
    <string name="title_activity_config">設定</string>
    <string name="title_activity_id_search">ID検索</string>
    <string name="title_activity_shop">ショップ</string>
    <string name="title_activity_buy">購入</string>
    <string name="title_activity_change_clothes">きせかえ</string>
    <string name="title_activity_gacha">ガチャ</string>
    <string name="title_activity_get_item">アイテムゲット</string>
    <string name="title_activity_back_up">バックアップ・データ引き継ぎ</string>
    <string name="title_activity_register">ユーザ登録</string>
    <string name="title_activity_completed_register">ユーザ登録完了</string>
    <string name="title_activity_hand_over">データ引き継ぎ</string>
    <string name="title_activity_completed_handover">データ引き継ぎ完了</string>
    <string name="btn_friendslist">友だち</string>
    <string name="btn_chat">チャット</string>
    <string name="btn_openspace">広場</string>
    <string name="btn_others">その他</string>
    <string name="todo">TODO</string>
    <string name="startavacha_1_3"></string>
    <string name="please_input_name">名前を入力してください</string>
    <string name="login">ログイン</string>
   <string name="random_chat_message"></string>
    <string name="change_button">さがす</string>
    <color name="name_color">#000000</color>
    <color name="text_color">#202020</color>
    <string name="send">おくる</string>
    <string name="submit_clothing">この服装にする</string>
    <string name="my_message"></string>
    <string name="her_message"></string>
    <string name="ok_button"></string>
    <string name="ok_action"></string>
    <string name="comment_man"></string>
    <string name="comment_woman"></string>
    <string name="default_sex"></string>
    <string name="title_activity_random_chat_activity2">RandomChatActivity2</string>
    <string name="title_activity_dress_up">きせかえ</string>
   <string name="good"></string>
    <string name="good_button">いいね</string>
    <string name="good_finger"></string>
    <string name="title_activity_dress_up_girl">DressUpGirlActivity</string>
    <string name="point">ポイント</string>
    <string name="my_hair_image"></string>
    <string name="my_face_image"></string>
    <string name="my_body_image"></string>
    <string name="her_hair_image"></string>
    <string name="her_face_image"></string>
    <string name="her_body_image"></string>
    <string name="default_left_surface"></string>
    <string name="default_right_surface"></string>
    <string name="chat_my_surface"></string>
    <string name="chat_her_surface"></string>
    <string name="title_activity_palette">きせかえ</string>
    <string name="avatar_images"></string>
    <string name="change_hair"></string>
    <string name="change_face"></string>
    <string name="change_body"></string>
    <string name="title_activity_websocket">WebsocketActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="chat_log">履歴</string>
    <string name="title_activity_name">名前</string>
    <string name="change_name">名前変更</string>
    <string name="current_my_name"></string>
    <string name="input_my_name"></string>
    <string name="this_is_your_name">現在のあなたの名前は</string>
    <string name="send_name_button">名前を決定する</string>
    <string name="title_activity_chat_log">ユーザ履歴</string>
    <string name="looking_for">相手を探し中・・・</string>
    <string name="back">もどる</string>
    <string name="official_web">公式サイト</string>
    <string name="please_update">新しいバージョンにアップデートして下さい.</string>
    <string name="update">アップデート</string>
    <string name="cancel">キャンセル</string>
   <string name="board_title">伝言板</string>
</resources>