<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"

    tools:context=".NameActivity" >

    <TextView
        android:id="@+id/current_my_name"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/current_my_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/this_is_your_name" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="text"
        android:padding="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_name"
        android:layout_marginTop="74dp" >

        <Button
            android:id="@+id/send_name_button"
            style="@style/questionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
   
            android:text="@string/send_name_button" />
    </RelativeLayout>

</RelativeLayout>